# codex-session-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.cast
.github/workflows/: build-and-package.yml
npm/: README.md  package.json
scripts/: release-notes.sh  render-demo-svg.sh
src/: main.rs
tests/: integration_preview.rs
