[package]
name = "codex-session-explorer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codex-session-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.28"
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
