[package]
name = "codex-session-explorer"
version = "1.3.19"
edition = "2024"

[[bin]]
name = "codex-session-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.28"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }
